[gd_scene load_steps=20 format=3 uid="uid://dwb8cl1qe74wd"]

[ext_resource type="PackedScene" uid="uid://b4lope2jmcye5" path="res://player/player.tscn" id="1_ks1kn"]
[ext_resource type="Script" path="res://level/Mapa.gd" id="1_nym55"]
[ext_resource type="Script" path="res://player/Camera.gd" id="2_tw5cj"]
[ext_resource type="PackedScene" uid="uid://g0yfwqo3g4e6" path="res://mundo/HUDVidaPontos.tscn" id="3_5ol6p"]
[ext_resource type="PackedScene" uid="uid://cw0ad56dvr8gf" path="res://zombi/zombi_spaw.tscn" id="3_fjdr7"]
[ext_resource type="Script" path="res://mundo/door1.gd" id="7_hald1"]
[ext_resource type="Script" path="res://mundo/doornv2.gd" id="8_0m4vp"]
[ext_resource type="Script" path="res://zombi/zombi.gd" id="11_xwu34"]
[ext_resource type="PackedScene" uid="uid://b6j53sf8wopdg" path="res://mundo/door.tscn" id="11_yctor"]
[ext_resource type="Texture2D" uid="uid://dk6seyucdx0jl" path="res://assets/zombies/zombie1.png" id="12_byura"]
[ext_resource type="PackedScene" uid="uid://b0mnfdm3tjokl" path="res://mundo/barricada.tscn" id="12_m4mg8"]
[ext_resource type="PackedScene" uid="uid://bjgby10v1pwd2" path="res://zombi/zombi2.tscn" id="12_sbqi8"]
[ext_resource type="PackedScene" path="res://cenario.tscn" id="12_sl8rn"]
[ext_resource type="PackedScene" uid="uid://c0jla6svduvnf" path="res://zombi/zombiTank.tscn" id="13_0uelo"]
[ext_resource type="PackedScene" uid="uid://b60q4vpudo3v7" path="res://zombi/zombiExplode.tscn" id="14_qosl3"]

[sub_resource type="NavigationPolygon" id="NavigationPolygon_7xbhm"]
vertices = PackedVector2Array(747, 520, 1395, -613, 1398, 1443, 747, 535, 747, 279, 747, 264, 747, -9, 747, -24, 747, -105, -983, -630, 297, -106, 297, -105, 249, -106, 249, -105, 183, -105, 183, -56, 247, -56, 247, -55, 171, -56, 171, -105, -9, -105, -168, -105, -168, -73, -169, -73, -169, 360, -168, 360, -168, 394, -119, 394, -119, 392, -53, 392, 248, 650, -53, 343, -117, 343, -117, -56, -21, -56, 249, -22, 249, -10, 247, 88, 249, -55, 695, -9, 297, -22, 297, -55, 299, -55, 695, -24, 299, -56, 695, -56, 695, 86, 537, 86, 521, 138, 537, 138, 395, 599, 521, 86, 297, -10, 297, 86, 249, 88, 247, 136, 249, 136, 249, 343, 183, 343, 183, 392, 171, 392, 171, 343, 247, 392, 247, 616, 248, 616, 297, 650, 297, 648, 395, 648, 299, 599, 299, 344, 297, 344, 297, 138, 695, 138, 695, 264, 695, 279, 695, 535, 695, 599, 407, 599, 407, 648, 696, 648, 696, 650, -983, 1441, 745, 650, 745, 648, 747, 648, -41, 343, -41, 392, 695, 520, -21, -105, -9, -56)
polygons = Array[PackedInt32Array]([PackedInt32Array(0, 1, 2, 3), PackedInt32Array(1, 0, 4), PackedInt32Array(5, 1, 4), PackedInt32Array(1, 5, 6), PackedInt32Array(7, 1, 6), PackedInt32Array(1, 7, 8), PackedInt32Array(9, 1, 8, 10), PackedInt32Array(8, 11, 10), PackedInt32Array(9, 10, 12), PackedInt32Array(12, 13, 14, 9), PackedInt32Array(15, 16, 17), PackedInt32Array(15, 17, 18), PackedInt32Array(14, 15, 18, 19), PackedInt32Array(9, 14, 19), PackedInt32Array(9, 19, 20), PackedInt32Array(21, 22, 23, 9), PackedInt32Array(24, 25, 26), PackedInt32Array(27, 28, 29, 30), PackedInt32Array(31, 32, 33, 34, 17, 35, 36, 37), PackedInt32Array(17, 38, 35), PackedInt32Array(39, 40, 41, 42, 43, 6), PackedInt32Array(42, 44, 45, 43), PackedInt32Array(43, 7, 6), PackedInt32Array(39, 46, 47, 40), PackedInt32Array(48, 47, 49, 50), PackedInt32Array(47, 48, 51), PackedInt32Array(40, 47, 51, 52), PackedInt32Array(51, 53, 52), PackedInt32Array(35, 40, 52, 36), PackedInt32Array(36, 54, 37), PackedInt32Array(55, 56, 57, 58), PackedInt32Array(58, 59, 60, 61), PackedInt32Array(59, 62, 63), PackedInt32Array(63, 64, 30), PackedInt32Array(65, 66, 67), PackedInt32Array(50, 68, 69, 48), PackedInt32Array(69, 70, 71, 48), PackedInt32Array(49, 72, 73, 50), PackedInt32Array(73, 5, 4, 74), PackedInt32Array(75, 76, 77), PackedInt32Array(78, 79, 80, 81), PackedInt32Array(82, 83, 84, 2), PackedInt32Array(82, 2, 81, 80), PackedInt32Array(31, 37, 55, 85), PackedInt32Array(60, 59, 63), PackedInt32Array(55, 58, 61), PackedInt32Array(86, 60, 63, 30), PackedInt32Array(55, 61, 85), PackedInt32Array(29, 31, 85, 86), PackedInt32Array(50, 73, 74), PackedInt32Array(50, 74, 87), PackedInt32Array(29, 86, 30), PackedInt32Array(2, 84, 3), PackedInt32Array(87, 0, 3, 75), PackedInt32Array(50, 87, 75, 77), PackedInt32Array(67, 50, 77, 78), PackedInt32Array(67, 78, 81, 65), PackedInt32Array(30, 65, 81), PackedInt32Array(27, 30, 81, 26), PackedInt32Array(26, 81, 9, 24), PackedInt32Array(23, 24, 9), PackedInt32Array(88, 21, 9), PackedInt32Array(88, 9, 20), PackedInt32Array(88, 20, 89, 34), PackedInt32Array(17, 34, 89), PackedInt32Array(17, 89, 18)])
outlines = Array[PackedVector2Array]([PackedVector2Array(-993, -641, 1405, -623, 1409, 1454, -993, 1451)])
source_geometry_group_name = &"navigation_polygon_source_group"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_2tbva"]
radius = 6.0
height = 20.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ykhjo"]
radius = 4.0
height = 22.0

[sub_resource type="PackedScene" id="PackedScene_fshwt"]
_bundled = {
"conn_count": 5,
"conns": PackedInt32Array(3, 0, 26, 25, 2, 0, 0, 3, 0, 28, 27, 2, 0, 0, 5, 0, 30, 29, 2, 0, 0, 6, 0, 30, 31, 2, 0, 0, 8, 0, 30, 32, 2, 0, 0),
"editable_instances": [],
"names": PackedStringArray("Zombi", "collision_layer", "collision_mask", "motion_mode", "wall_min_slide_angle", "script", "CharacterBody2D", "Sprite2D", "texture_filter", "scale", "texture", "CollisionShape2D", "position", "shape", "Mao", "Area2D", "HitBarricada", "wait_time", "Timer", "HitPlayer", "NavigationAgent2D", "debug_enabled", "debug_path_custom_color", "TimerNavigation", "autostart", "_on_mao_body_entered", "body_entered", "_on_mao_body_exited", "body_exited", "_on_HitBarricada_timeout", "timeout", "_on_hitPlayer_timeout", "_on_timer_navigation_timeout"),
"node_count": 9,
"node_paths": [],
"nodes": PackedInt32Array(-1, -1, 6, 0, -1, 5, 1, 0, 2, 1, 3, 2, 4, 3, 5, 4, 0, 0, 0, 7, 7, -1, 3, 8, 2, 9, 5, 10, 6, 0, 0, 0, 11, 11, -1, 2, 12, 7, 13, 8, 0, 0, 0, 15, 14, -1, 2, 1, 9, 2, 9, 0, 3, 0, 11, 11, -1, 2, 12, 10, 13, 11, 0, 3, 0, 18, 16, -1, 1, 17, 12, 0, 3, 0, 18, 19, -1, 0, 0, 0, 0, 20, 20, -1, 2, 21, 13, 22, 14, 0, 0, 0, 18, 23, -1, 2, 17, 15, 24, 13, 0),
"variants": [4, 87, 1, 0.0, ExtResource("11_xwu34"), Vector2(1.5, 1.556), ExtResource("12_byura"), Vector2(-4, 0), SubResource("CapsuleShape2D_2tbva"), 34, Vector2(4, 0), SubResource("CapsuleShape2D_ykhjo"), 1.5, true, Color(1, 0, 0, 1), 0.5],
"version": 3
}

[node name="Node2D" type="Node2D"]
script = ExtResource("1_nym55")

[node name="NavigationRegion2D" type="NavigationRegion2D" parent="."]
position = Vector2(-1, 0)
navigation_polygon = SubResource("NavigationPolygon_7xbhm")

[node name="cenario" parent="NavigationRegion2D" instance=ExtResource("12_sl8rn")]
position = Vector2(1, 0)

[node name="Timer" type="Timer" parent="."]

[node name="Player" parent="." instance=ExtResource("1_ks1kn")]
z_index = 100
collision_layer = 10

[node name="HUDVidaPontos" parent="." instance=ExtResource("3_5ol6p")]

[node name="Camera2D" type="Camera2D" parent="."]
zoom = Vector2(1.95, 1.95)
script = ExtResource("2_tw5cj")
player = NodePath("../Player")

[node name="Door" parent="." instance=ExtResource("11_yctor")]
position = Vector2(-16, -80)
script = ExtResource("7_hald1")

[node name="Door2" parent="." instance=ExtResource("11_yctor")]
position = Vector2(273, -14)
rotation = -1.58221
script = ExtResource("8_0m4vp")

[node name="barricada1" parent="." instance=ExtResource("12_m4mg8")]
position = Vector2(176, -80)

[node name="barricada2" parent="." instance=ExtResource("12_m4mg8")]
position = Vector2(-48, 368)
rotation = 6.27615

[node name="barricada3" parent="." instance=ExtResource("12_m4mg8")]
position = Vector2(176, 368)

[node name="barricada4" parent="." instance=ExtResource("12_m4mg8")]
position = Vector2(720, -15)
rotation = 1.5708

[node name="barricada5" parent="." instance=ExtResource("12_m4mg8")]
position = Vector2(720, 271)
rotation = 1.5708

[node name="barricada6" parent="." instance=ExtResource("12_m4mg8")]
position = Vector2(719, 532)
rotation = 1.5708

[node name="barricada7" parent="." instance=ExtResource("12_m4mg8")]
position = Vector2(400, 624)

[node name="ZombiSpaw4" parent="." instance=ExtResource("3_fjdr7")]
position = Vector2(215, -294)
zombiNormal = SubResource("PackedScene_fshwt")
speedZombi = ExtResource("12_sbqi8")
tankZombi = ExtResource("13_0uelo")
explodeZombi = ExtResource("14_qosl3")
_first_follow = NodePath("../barricada1")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
